--- a/src/assets/sass/home.scss
+++ b/src/assets/sass/home.scss
@@ -1,6 +1,11 @@
 .home {
-    min-height: 100vh;
-    width: 1366px;
-    background: rgba($color: #fff, $alpha: 0.9);
-    margin: 0 auto;
+    .el-container {
+        height: 100%;
+
+        .el-aside {
+            .el-menu {
+                height: 100%;
+            }
+        }
+    }
 }
