--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -15,7 +15,8 @@
 /* 过渡动画 */
 
 #app {
-    background: url("~@/assets/img/bg.jpg") no-repeat center / cover;
+    // background: url("~@/assets/img/bg.jpg") no-repeat center / cover;
+    background: #000;
 
     header {
         position: fixed;
